feat: add orders and products at users controller index action
